--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "protobuf"]
 	path = protobuf
-	url = https://github.com/open-crypto-broker/crypto-broker-proto.git
+	url = https://github.com/open-crypto-broker/crypto-broker-proto
