--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "./dist"
   ],
   "scripts": {
-    "build": "npm run gen-types && tsc --declaration",
-    "build-docker": "docker buildx build -t client_app_js:latest .",
-    "hash": "node ./dist/cli.js --profile=Default hash 'Hello' ",
-    "sign": "node ./dist/cli.js --profile=Default sign ../crypto-broker-deployment/k8s/kube-broker/files/certificates/end-entity.csr ../crypto-broker-deployment/k8s/kube-broker/files/certificates/ca_cert.pem ../crypto-broker-deployment/k8s/kube-broker/files/certificates/private_key.pem ",
+    "build": "tsc --declaration",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "format": "npx eslint --fix && prettier --write 'src/**/*.{ts,tsx,js,json,md}'",
-    "gen-types": "git submodule update --init --recursive && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/lib/proto -I ./protobuf/ messages.proto",
+    "format": "eslint --fix && prettier --write 'src/**/*.{ts,tsx,js,json,md}'",
     "test": "jest",
     "prepare": "husky || true"
   },
@@ -34,8 +30,8 @@
   "dependencies": {
     "@bufbuild/protobuf": "^2.5.2",
     "@grpc/grpc-js": "1.13.3",
+    "argparse": "^2.0.1",
     "bufbuild": "^0.2.0",
-    "minimist": "^1.2.8",
     "tsconfig": "^7.0.0",
     "uuid": "^11.1.0"
   },
@@ -52,6 +48,7 @@
     "jest": "^29.6.2",
     "prettier": "^3.5.3",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "ts-proto": "^2.7.0",
     "tsx": "^4.19.4",
     "typescript": "5.8.3"
