--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,24 +1,67 @@
 version: '3'
 
-tasks:
+vars:
+  PROTOBUF_VERSION: "32.1"
+  # GNU grep support depending on OS
+  GREP_CMD:
+    sh: |
+      case "$(uname)" in
+        Darwin*) echo ggrep ;;
+        Linux*) echo grep ;;
+      esac
 
-  # This command may require to be run with "sudo".
-  #
+tasks:
+  ################# Development Tools ####################
   # Additional resources:
-  # - https://protobuf.dev/getting-started/gotutorial/
+  # - https://protobuf.dev/getting-started/
   # - https://protobuf.dev/installation/
   # - https://docs.docker.com/reference/cli/docker/buildx/
   tools:
-    desc: "Installs the required tools to develop the project"
+    desc: "Download tools required for development"
+    deps: [install-protobuf-compiler, install-docker-buildx]
     cmds:
-      - apt-get update && apt-get install -y protobuf-compiler docker-buildx
+      - protoc --version docker-buildx
 
-  proto:
-    desc: "Generates JS stubs from proto files"
+  # Install docker-buildx
+  install-docker-buildx:
+    desc: "Install docker-buildx on Ubuntu"
+    platforms: ["linux/amd64"]
     cmds:
-      - git submodule update --init --recursive
-      - protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/lib/proto -I ./protobuf/ messages.proto
+      - apt install docker-buildx
 
+  # Public task to install the pre-built protobuf compiler depending on the architecture
+  install-protobuf-compiler:
+    desc: "Download and install pre-built protobuf compiler"
+    cmds:
+      - task: install-protobuf-compiler-linux-amd64
+      - task: install-protobuf-compiler-darwin
+
+  install-protobuf-compiler-linux-amd64:
+    desc: "Download and install pre-built protobuf compiler for Linux"
+    internal: true
+    platforms: ["linux/amd64"]
+    cmds:
+      # Create temporary download folder
+      - mkdir tmp-download
+      # Download specified version
+      - cd tmp-download && curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v{{.PROTOBUF_VERSION}}/protoc-{{.PROTOBUF_VERSION}}-linux-x86_64.zip
+      # Unzip download
+      - cd tmp-download && unzip protoc-{{.PROTOBUF_VERSION}}-linux-x86_64.zip -d $HOME/.local/share/protobuf/
+      # Remove temporary download folder
+      - rm -rf tmp-download
+      # Add path to .bashrc if it does not already exists
+      - grep -qx 'export PATH="$PATH:$HOME/.local/share/protobuf/bin"' ~/.bashrc || echo 'export PATH="$PATH:$HOME/.local/share/protobuf/bin"' >> ~/.bashrc
+      # Reload .bashrc
+      - source $HOME/.bashrc
+
+  install-protobuf-compiler-darwin:
+    desc: "Download and install protobuf compiler for Apple/macOS"
+    internal: true
+    platforms: ["darwin"]
+    cmds:
+      - brew install protobuf
+
+  ################# Build Node.js Client ####################
   build:
     desc: "Builds the js files including declarations and CLI"
     cmds:
@@ -27,50 +70,68 @@ tasks:
   build-docker:
     desc: "Builds the Docker image for the client app"
     vars:
-      TAG: '{{.TAG| default "latest"}}'
+      TAG: '{{.TAG | default "latest"}}'
     dotenv: ['.env']
     cmds:
       - docker buildx build -t client_app_js:{{.TAG}} .
 
-  clean:
-    desc: "Cleans the transpiled JS files"
+  delete-binaries:
+    desc: "Delete binary artifacts"
     cmds:
       - npm run clean
 
-  vulnerability-check:
-    desc: "Runs the npm audition to identify vulnerabilities"
+  proto:
+    desc: "Generates JS stubs from proto files"
     cmds:
-      - "npm audit"
+      - git submodule update --init --recursive
+      - protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/lib/proto -I ./protobuf/ messages.proto
 
+  ################# Tests ####################
   test-hash:
-    desc: "Quick command for easy testing: runs the hashing command with Default profile"
+    deps: [build]
+    desc: "Test hashing command with Default profile"
     cmds:
       - node ./dist/cli.js --profile=Default hash "Hello"
 
   test-sign:
-    desc: "Quick command for easy testing: runs certificate signing command with Default profile"
+    deps: [build]
+    desc: "Test certificate signing command with Default profile"
     cmds:
-      - node ./dist/cli.js --profile=Default sign --caCert ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/ca_cert.pem --csr ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/end-entity.csr  --caKey ../crypto-broker-deployment/deployments/k8s/kube-broker/files/certificates/private_key.pem --subject="CN=MyCert,O=SAP,ST=BA,C=DE"
+      - |
+        TMP_DIR=tmp-tests
+        TEST_CA_DIR=../crypto-broker-deployment/testing/certificates/test-ca
+        TEST_CSR_DIR=../crypto-broker-deployment/testing/certificates/test-csr
+        rm -rf $TMP_DIR
+        mkdir -p $TMP_DIR
+        SIGNED_CERTIFICATE=$(node ./dist/cli.js --profile=Default sign --csr=$TEST_CSR_DIR/test-client.csr --caCert=$TEST_CA_DIR/root-CA-ecdsa.pem --caKey=$TEST_CA_DIR/root-CA-ecdsa-private-key.pem | {{.GREP_CMD}} -oP '\"signedCertificate\":\s?"\K[^"]+')
+        printf "$SIGNED_CERTIFICATE" > $TMP_DIR/cert-response.pem
+        openssl x509 -inform PEM -in $TMP_DIR/cert-response.pem -text
 
-  test:
-    desc: "Runs the tests"
-    cmds:
-      - npm run test
-
-  lint:
-    desc: "Runs the linter"
-    cmds:
-      - npm run lint
-
+  ################# Continuous Improvement Tasks ####################
   format:
-    desc: "Runs the formatter"
+    desc: "Apply formatting rules to Node.js code"
     cmds:
       - npm run format
 
+  lint:
+    desc: "Apply linting to Node.js code"
+    cmds:
+      - npm run lint
+
+  unit-test:
+    desc: "Run unit-tests"
+    cmds:
+      - npm run test
+
+  vulnerability-check:
+    desc: "Run vulnerability check"
+    cmds:
+      - npm audit
+
   ci:
-    desc: "Runs local continuous integration checks on source code"
+    desc: "Runs continuous integration checks on source code"
     cmds:
     - task: format
     - task: lint
-    - task: test
+    - task: unit-test
     - task: vulnerability-check
