--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,19 +15,11 @@ tasks:
   # Additional resources:
   # - https://protobuf.dev/getting-started/
   # - https://protobuf.dev/installation/
-  # - https://docs.docker.com/reference/cli/docker/buildx/
   tools:
     desc: "Download tools required for development"
-    deps: [install-protobuf-compiler, install-docker-buildx]
+    deps: [install-protobuf-compiler]
     cmds:
-      - protoc --version docker-buildx
-
-  # Install docker-buildx
-  install-docker-buildx:
-    desc: "Install docker-buildx on Ubuntu"
-    platforms: ["linux/amd64"]
-    cmds:
-      - apt install docker-buildx
+      - protoc --version
 
   # Public task to install the pre-built protobuf compiler depending on the architecture
   install-protobuf-compiler:
@@ -68,14 +60,6 @@ tasks:
       - npm install
       - npm run build
 
-  build-docker:
-    desc: "Builds the Docker image for the client app"
-    vars:
-      TAG: '{{.TAG | default "latest"}}'
-    dotenv: ['.env']
-    cmds:
-      - docker buildx build -t client_app_js:{{.TAG}} .
-
   delete-binaries:
     desc: "Delete binary artifacts"
     cmds:
@@ -86,27 +70,6 @@ tasks:
     cmds:
       - git submodule update --init --recursive
       - protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/lib/proto -I ./protobuf/ messages.proto
-
-  ################# Tests ####################
-  test-hash:
-    deps: [build]
-    desc: "Test hashing command with Default profile"
-    cmds:
-      - node ./dist/cli.js --profile=Default hash "Hello"
-
-  test-sign:
-    deps: [build]
-    desc: "Test certificate signing command with Default profile"
-    cmds:
-      - |
-        TMP_DIR=tmp-tests
-        TEST_CA_DIR=../crypto-broker-deployment/testing/certificates/test-ca
-        TEST_CSR_DIR=../crypto-broker-deployment/testing/certificates/test-csr
-        rm -rf $TMP_DIR
-        mkdir -p $TMP_DIR
-        SIGNED_CERTIFICATE=$(node ./dist/cli.js --profile=Default sign --csr=$TEST_CSR_DIR/csr-nist-secp384r1.csr --caCert=$TEST_CA_DIR/cert-test-CA-nist-secp521r1.pem --caKey=$TEST_CA_DIR/test-CA-nist-secp521r1.pem | {{.GREP_CMD}} -oP '\"signedCertificate\":\s?"\K[^"]+')
-        printf "$SIGNED_CERTIFICATE" > $TMP_DIR/cert-response.pem
-        openssl x509 -inform PEM -in $TMP_DIR/cert-response.pem -text
 
   ################# Continuous Improvement Tasks ####################
   format:
