--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitAny": false,
     "strictNullChecks": true,
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./dist/lib",
     "resolveJsonModule": false,
     "types": ["node"],
   },
