--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "agility"
   ],
   "author": "Arturo Guridi",
-  "contributors": ["Miyana Stange"],
+  "contributors": [
+    "Miyana Stange"
+  ],
   "license": "Apache-2.0",
   "description": "Client Javascript repository to interact with a deployed Crypto Broker Server",
   "dependencies": {
@@ -33,6 +35,7 @@
     "@grpc/grpc-js": "1.14.1",
     "@peculiar/x509": "^1.14.0",
     "bufbuild": "^0.2.0",
+    "rxjs": "^7.8.2",
     "tsconfig": "^7.0.0",
     "uuid": "^11.1.0"
   },
